[project]
name = "highperfpython"
version = "0.1.0"
description = "Method for evaluating performances in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "line-profiler[full]>=4.2.0",
    "maturin>=1.8.3",
    "memory-profiler>=0.61.0",
    "py-spy>=0.4.0",
    "pydantic>=2.11.3",
    "ruff>=0.11.7",
    "scalene>=1.5.51",
    "viztracer>=1.0.3",
]
